incorpore noticias con enlaces

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             src="https://www.cahockey.org.ar/media/novedades/final-Arg-Ned-PRIN.jpg"
             alt=""
           />
+          <a href="noticia1.html">Seguir leyendo</a>
         </div>
 
         <div class="col-lg-3 col-xs-12">
@@ -72,7 +73,7 @@
             src="https://www.eltiempo.com/files/image_1200_680/uploads/2022/07/17/62d47d0e9a5cc.jpeg"
             alt="cancha de futbol"
           />
-          <a href="noticia.html">Seguir leyendo</a>
+          <a href="noticia2.html">Seguir leyendo</a>
         </div>
 
         <div class="col-lg-3 col-xs-12">
@@ -85,6 +86,7 @@
             src="https://www.infobae.com/new-resizer/X5VafFyfchO20ezpOAOMK8vPlMw=/768x432/filters:format(webp):quality(85)/cloudfront-us-east-1.images.arcpublishing.com/infobae/LEGO6NEFYJD2RNBEACHWJSS2CQ.jpg"
             alt="Ciudad nevada"
           />
+          <a href="noticia3.html">Seguir leyendo</a>
         </div>
       </div>
     </div>
