Inclusión de otros elementos Carrusel, formulario de comentarios, copete.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/estilos.css" />
 
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light color-fondo">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Diario digital</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -55,6 +56,11 @@
       <div class="row">
         <div class="col-lg-6 col-xs-12">
           <h2>Las leonas subcampeonas del mundo</h2>
+          <h5>
+            El seleccionado argentino tuvo sus chances en el inicio, pero
+            después sucumbió ante el poderoso combinado europeo, que se consagró
+            tricampeón del mundo
+          </h5>
           <img
             class="img-fluid"
             src="https://www.cahockey.org.ar/media/novedades/final-Arg-Ned-PRIN.jpg"
@@ -64,10 +70,14 @@
         </div>
 
         <div class="col-lg-3 col-xs-12">
-          <h2>
+          <h1>
             Se estrenó la “bodycam”: las imágenes de la nueva tecnología que
             promete revolucionar las transmisiones de fútbol
-          </h2>
+          </h1>
+          <h5>
+            En el Colonia 1-Milan 2 un jugador alemán llevó una cámara pegada al
+            cuerpo
+          </h5>
           <img
             class="img-fluid"
             src="https://www.eltiempo.com/files/image_1200_680/uploads/2022/07/17/62d47d0e9a5cc.jpeg"
@@ -77,10 +87,11 @@
         </div>
 
         <div class="col-lg-3 col-xs-12">
-          <h2>
+          <h1>Se esperan fuertes nevadas en varias provincias del país</h1>
+          <h5>
             Desde el norte a la patagonia, hay alerta en 7 provincias donde se
             anticipan fuertes nevadas
-          </h2>
+          </h5>
           <img
             class="img-fluid"
             src="https://www.infobae.com/new-resizer/X5VafFyfchO20ezpOAOMK8vPlMw=/768x432/filters:format(webp):quality(85)/cloudfront-us-east-1.images.arcpublishing.com/infobae/LEGO6NEFYJD2RNBEACHWJSS2CQ.jpg"
