--- a/noticia1.html
+++ b/noticia1.html
@@ -16,22 +16,71 @@
     <div class="conteiner-fluid">
       <div class="row">
         <div class="col">
-          <h2>
+          <h1>
             Las leonas subcampeonas del mundo
-          </h2>
+          </h1>
+          <h5>El seleccionado argentino tuvo sus chances en el inicio, pero después sucumbió ante el poderoso combinado europeo, que se consagró tricampeón del mundo</h5>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-3 col-xs-12">
-          <img
-            class="img-fluid"
-            src="https://www.cahockey.org.ar/media/novedades/final-Arg-Ned-PRIN.jpg"
-            alt=""
-          />
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="https://www.cahockey.org.ar/media/novedades/final-Arg-Ned-PRIN.jpg"
+                  class="d-block w-100"
+                  alt="Entrega de medallas"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://images.ole.com.ar/2022/07/18/FO0g0LOq6_1256x620__2.jpg#1658153747530"
+                  class="d-block w-100"
+                  alt="Premios mejores jugadoras del mundo"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://www.clarin.com/img/2021/08/23/maria-belen-succi-no-metio___b9lHXhvP0V_1256x620__2.jpg#1657764389580"
+                  class="d-block w-100"
+                  alt="María Belen Succi, la mejor arquera del mundo del hockey"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
         <div class="col-lg-9 col-xs-12">
-          <p>
-            Esa última imagen es la de Succi llorando en una forma desconsolada,
+          <p>Las Leonas no pudieron coronar con el título su gran Mundial de hockey femenino en Terrassa, España: cayeron 3-1 ante Países Bajos, en un duelo en el que las vencedoras plasmaron su jerarquía, que las llevó colocarse la corona por tercera ocasión consecutiva (y novena en la historia).
+            Se pudo ver la imagen de la de Succi llorando en una forma desconsolada,
             tirada sobre el sintético en su propio círculo. Sabe la arquera que
             todo terminó. Que su brillante carrera en el seleccionado nacional
             llegó a su fin y que el cierre fue con derrota. Pero no se trata de
@@ -78,6 +127,16 @@
             Deportivo. Prensa CAH.
           </p>
         </div>
+      </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Deja tu comentario</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="button" class="btn btn-success">Enviar comentario</button>
       </div>
     </div>
     <script
