--- a/noticia2.html
+++ b/noticia2.html
@@ -16,19 +16,64 @@
     <div class="conteiner-fluid">
       <div class="row">
         <div class="col">
-          <h2>
+          <h1>
             Se estrenó la “bodycam”: las imágenes de la nueva tecnología que
             promete revolucionar las transmisiones de fútbol
-          </h2>
+          </h1>
+          <h5>
+            En el Colonia 1-Milan 2 un jugador alemán llevó una cámara pegada al
+            cuerpo
+          </h5>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-3 col-xs-12">
-          <img
-            class="img-fluid"
-            src="https://www.eltiempo.com/files/image_1200_680/uploads/2022/07/17/62d47d0e9a5cc.jpeg"
-            alt="cancha de futbol"
-          />
+          <div
+            id="carouselExampleFade"
+            class="carousel slide carousel-fade"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="https://www.eltiempo.com/files/image_1200_680/uploads/2022/07/17/62d47d0e9a5cc.jpeg"
+                  class="d-block w-100"
+                  alt="Partido de futbol"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="https://images.ole.com.ar/2022/07/17/jSyle6F1P_720x0__1.jpg"
+                  class="d-block w-100"
+                  alt="Jugador con la camara en su camiseta"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleFade"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleFade"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
         <div class="col-lg-9 col-xs-12">
           <p>
@@ -72,6 +117,28 @@
             sueñan con retener su corona de la Serie A en los próximos meses.
           </p>
         </div>
+      </div>
+      <div class="row">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Deja tu comentario</label
+          >
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+        <button type="button" class="btn btn-success">Enviar comentario</button>
       </div>
     </div>
     <script
